# backend

./: Cargo.toml  README.md
szerintukhu/: Cargo.toml  Trunk.toml  index.html  index.scss  run.bat
szerintukhu/src/: main.rs
