[package]
name = "szerintukhu"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = "0.17.0"
yewtil = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3.45"
wasm-bindgen = "0.2.73"